--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap');  
 .App {
   text-align: center;
 }
+
 
 .App-logo {
   height: 40vmin;
